Fixed wrong font stack on codesample

--- a/src/less/theme/content/codesample/codesample.less
+++ b/src/less/theme/content/codesample/codesample.less
@@ -1,4 +1,5 @@
 /* stylelint-disable */
+
 /* http://prismjs.com/ */
 /**
  * prism.js default theme for JavaScript, CSS and HTML
@@ -10,7 +11,8 @@
  pre[class*="language-"] {
    color: black;
    text-shadow: 0 1px white;
-   font-family: serif;
+   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;;
+   font-size: .875rem;
    direction: ltr;
    text-align: left;
    white-space: pre;
@@ -57,7 +59,8 @@
 
  :not(pre) > code[class*="language-"],
  pre[class*="language-"] {
-   background: #f5f2f0;
+   background: transparent !important;
+   border: 1px solid #ccc;
  }
 
  /* Inline code */
